사인저장 오류 수정